# palbox

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: TUNNEL-SETUP.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  docker.rs  lib.rs  main.rs  rcon.rs  tunnel.rs
src/routes/: +page.svelte
